--- a/translations/es/LC_MESSAGES/messages.po
+++ b/translations/es/LC_MESSAGES/messages.po
@@ -50,69 +50,13 @@ msgstr ""
 msgid "Click para seleccionar especialidad"
 msgstr ""
 
-#: app.py:317
-msgid "Radiólogo abdominal"
-msgstr ""
 
 #: app.py:318
 msgid "Neurorradiólogo"
-msgstr ""
 
 #: app.py:319
 msgid "Radiólogo de mama"
-msgstr ""
 
-#: app.py:320
-msgid "Radiólogo de músculo-esquelético"
-msgstr ""
-
-#: app.py:321
-msgid "Radiólogo general"
-msgstr ""
-
-#: app.py:322
-msgid "Radiólogo intervencionista"
-msgstr ""
-
-#: app.py:323
-msgid "Radiólogo pediátrico"
-msgstr ""
-
-#: app.py:324
-msgid "Radiólogo torácico"
-msgstr ""
-
-#: app.py:325
-msgid "Residente de radiología"
-msgstr ""
-
-#: app.py:326
-msgid "Residente (especialidad distinta a la radiología)"
-msgstr ""
-
-#: app.py:327
-msgid "Estudiante de medicina"
-msgstr ""
-
-#: app.py:328
-msgid "Médico adjunto de neumología"
-msgstr ""
-
-#: app.py:329
-msgid "Médico adjunto internista"
-msgstr ""
-
-#: app.py:330
-msgid "Médico adjunto de urgencias"
-msgstr ""
-
-#: app.py:331
-msgid "Médico adjunto de otra especialidad"
-msgstr ""
-
-#: app.py:332
-msgid "Otros"
-msgstr ""
 
 #: templates/about
 msgid "about.block-title"
@@ -183,7 +127,7 @@ msgid "login.block-title"
 msgstr "Iniciar Sesión"
 
 msgid "login.label"
-msgstr "Inicia sesión en COVID-19 training"
+msgstr "Inicia sesión en COVID-19 Training"
 
 msgid "login.button"
 msgstr "Iniciar sesión"
@@ -193,6 +137,74 @@ msgstr "No has aceptado los términos y condiciones"
 
 msgid "login.terms-and-conditions.label"
 msgstr "Acepto los términos y condiciones de uso"
+
+
+#: templates/start
+msgid "start.block-title"
+msgstr "Bienvenido"
+
+msgid "start.title"
+msgstr "Bienvenido a COVID-19 Training"
+
+msgid "start.category-select.label"
+msgstr "Por favor, selecciona tu especialidad para continuar:"
+
+msgid "start.category-select.abdominal-radiologist"
+msgstr "Radiólogo abdominal"
+
+msgid "start.category-select.neuroradiologist"
+msgstr "Neurorradiólogo"
+
+msgid "start.category-select.breast-radiologist"
+msgstr "Radiólogo de mama"
+
+msgid "start.category-select.musculoskeletal-radiologist"
+msgstr "Radiólogo de músculo-esquelético"
+
+msgid "start.category-select.general-radiologist"
+msgstr "Radiólogo general"
+
+msgid "start.category-select.interventional-radiologist"
+msgstr "Radiólogo intervencionista"
+
+msgid "start.category-select.pediatric-radiologist"
+msgstr "Radiólogo pediátrico"
+
+msgid "start.category-select.thoracic-radiologist"
+msgstr "Radiólogo torácico"
+
+msgid "start.category-select.radiology-resident"
+msgstr "Residente de radiología"
+
+msgid "start.category-select.resident-other"
+msgstr "Residente (especialidad distinta a la radiología)"
+
+msgid "start.category-select.medical-student"
+msgstr "Estudiante de medicina"
+
+msgid "start.category-select.pulmonology-physician"
+msgstr "Médico adjunto de neumología"
+
+msgid "start.category-select.internal-physician"
+msgstr "Médico adjunto internista"
+
+msgid "start.category-select.emergency-physician"
+msgstr "Médico adjunto de urgencias"
+
+msgid "start.category-select.intensive-physician"
+msgstr "Médico especialista en cuidados intensivos"
+
+msgid "start.category-select.physician-other"
+msgstr "Médico adjunto de otra especialidad"
+
+msgid "start.category-select.other"
+msgstr "Otros"
+
+msgid "start.button"
+msgstr "Empezar el Training"
+
+msgid "start.logout-label"
+msgstr "Logeado como <strong>%(email)s</strong>. Si quieres cerrar sesion y salir, haz <a href=\"/logout\">click aqui</a>."
 
 
 #: templates/not-found
