--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -19,11 +19,6 @@ msgstr ""
 "Generated-By: Babel 2.8.0\n"
 
 
-#: app.py:81
-msgid "Mujer"
-msgstr ""
-
-
 #: templates/about
 msgid "about.block-title"
 msgstr "About"
@@ -206,6 +201,59 @@ msgstr "Non-pathological"
 
 msgid "training.next-button"
 msgstr "Next"
+
+
+#: templates/results
+msgid "results.block-title"
+msgstr "Results"
+
+msgid "results.title"
+msgstr "Test results"
+
+msgid "results.message.no-question-answered"
+msgstr "You have not answered any test question"
+
+msgid "results.details.accuracy.label"
+msgstr "<b>Global accuracy:</b>"
+
+msgid "results.details.sensitivity.label"
+msgstr "<b>Sensitivity:</b>"
+
+msgid "results.details.specificity.label"
+msgstr "<b>Specificity:</b>"
+
+msgid "results.details.positive-predictive.label"
+msgstr "<b>Positive predictive value:</b>"
+
+msgid "results.details.negative-predictive.label"
+msgstr "<b>Negative predictive value:</b>"
+
+msgid "results.not-enough-samples"
+msgstr "Not enough samples"
+
+msgid "results.details.note"
+msgstr "<strong>NOTE:</strong> Values ​​calculated for COVID-19 diagnosis. Find more information on these metrics <a href='https://api.cloud.ifca.es:8080/swift/v1/covid19/DISCOVER%%20HOW%%20METRICS%%20WERE%%20CALCULATED.pdf' target=\"_blank\">here</a>."
+
+msgid "results.try-again.label"
+msgstr "Would you like to try again with further images?"
+
+msgid "results.try-again.button"
+msgstr "Try again"
+
+msgid "results.message.all-answers-correct"
+msgstr "<b>Congratulations! All answers are correct!</b>"
+
+msgid "results.wrong-answers.label"
+msgstr "Check your wrong answers"
+
+msgid "results.wrong-answers.correct-answer"
+msgstr "<b>Correct answer:</b>"
+
+msgid "results.wrong-answers.your-answer"
+msgstr "<b>Your answer:</b>"
+
+msgid "results.wrong-answers.pathological-detail"
+msgstr "Pathological (%(details)s)"
 
 
 #: templates/not-found
