--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -50,19 +50,19 @@ msgid "home.block-title"
 msgstr "Home"
 
 msgid "home.title"
-msgstr "COVID-19 ON CHEST X-RAY DIAGNOSIS TRAINING APPLICATION"
+msgstr "Training application for COVID-19 chest x-ray diagnosis"
 
 msgid "home.paragraph"
 msgstr "This is an application for training radiologists and other medical doctors on diagnosing COVID-19 compatible chest X-rays. Using your answers it will calculate your sensitivity, specificity, positive predictive value, negative predictive value and global accuracy."
 
 msgid "home.login-button"
-msgstr "COVID-19 TRAINING"
+msgstr "COVID-19 training"
 
 msgid "home.info-link"
-msgstr "Radiological features of COVID-19 on X-ray here."
+msgstr "<a href='https://api.cloud.ifca.es:8080/swift/v1/covid19/IMPORTANCE,%%20FINDINGS%%20AND%%20REPORT.pdf' target='_blank'>Radiological features of COVID-19 on X-Ray</a>"
 
 msgid "home.subtitle"
-msgstr "APPLICATION INTENDED TO BE USED BY ANY KIND OF MEDICAL DOCTOR"
+msgstr "Application intended to be used by any kind of medical doctor"
 
 msgid "home.column.medical-doctor.title"
 msgstr "Medical doctors"
